langtools/test/tools/javac/generics/inference/6650759/T6650759m.out
T6650759m.java:43:36: compiler.err.prob.found.req: (compiler.misc.incompatible.upper.lower.bounds: Z, java.lang.Integer,java.lang.Object, java.lang.String)
1 error
